--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -15,8 +16,8 @@ html, body {
   cursor: pointer;
 }
 
-.note-textarea, .note-title {
-  color: #000000;
+.note-textarea,
+.note-title {
   width: 100%;
   outline: none;
   border: none;
@@ -32,10 +33,6 @@ html, body {
   height: 50px;
   margin-top: 13px;
   font-size: 3rem;
-}
-
-.note-title:read-only, .note-textarea:read-only {
-  color: #757575;
 }
 
 .list-container .card {
